manifest/dev-tool/k8s_gitlab-runner.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-runner
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab-ci-runner
  namespace: gitlab-runner
  labels:
    app: gitlab-ci-runner
spec:
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  serviceName: gitlab-ci
  selector:
    matchLabels:
      app: gitlab-ci-runner
  template:
    metadata:
      labels:
        app: gitlab-ci-runner
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: 'kubernetes.io/hostname'
      serviceAccountName: gitlab-runner-admin
      securityContext:
        runAsNonRoot: false
      containers:
        - image: gitlab/gitlab-runner:alpine-v13.7.0
          name: gitlab-ci-runner
          command:
            - /scripts/run.sh
          ports:
            - containerPort: 9100
              name: http-metrics
              protocol: TCP
          volumeMounts:
            - name: gitlab-ci-runner-scripts
              mountPath: '/scripts'
              readOnly: true
            - name: conf
              mountPath: '/etc/gitlab-runner/certs'
      volumes:
        - name: conf
          hostPath:
            path: /mnt/conf
            type: Directory
        - name: gitlab-ci-runner-scripts
          configMap:
            name: gitlab-ci-runner-scripts
            items:
              - key: run.sh
                path: run.sh
                mode: 0755
      restartPolicy: Always
