manifest/dev-tool/k8s_minio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-tool
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: dev-tool
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100m

spec:
  rules:
    - host: 'ingress.nearmi'
      http:
        paths:
          - path: /minio(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: dev-tool
  labels:
    app: minio
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: minio
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: dev-tool
  labels:
     app: minio
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - '/data'
          ports:
            - name: http
              protocol: TCP
              containerPort: 9000
          volumeMounts:
            - name: cache
              mountPath: /data
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: minio-pvc
