manifest/dev-tool/k8s_nexus.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-tool
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: dev-tool
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m

spec:
  rules:
    - host: 'ingress.nearmi'
      http:
        paths:
          - path: /repo
            pathType: Prefix
            backend:
              service:
                name: nexus
                port:
                  number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: dev-tool
  labels:
    app: nexus
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: nexus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: dev-tool
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
          readinessProbe:
            httpGet:
              path: /repo
              port: 8081
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-pvc
---
